# RadialGM

./: .clang-format  .gitignore  .gitmodules  ArtManager.cpp  ArtManager.h  CMakeLists.txt  CmakeLists.txt  IconManager.cpp  IconManager.h  LICENSE.txt  LateralGMRewrite.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  RadialGM.pro  RadialGM.pro.shared  about.html  appveyor.yml  azure-jobs.yml  azure-pipelines.yml  azure-vars.yml  ci-build.sh  codestyle.xml  darktheme.css  images.qrc  license.html  main.cpp  main.h  mainwindow.cpp  mainwindow.h  msvc-static-64.txt  msvc-x64-deps.txt  myapp.rc  qtplugins.cpp  resources.qrc  resources.rc
Components/: ANSIescapeCodeHandler.cpp  ANSIescapeCodeHandler.h  ArtManager.cpp  ArtManager.h  EGMManager.cpp  EGMManager.h  EditorServices.cpp  EditorServices.h  GitTreeItem.cpp  GitTreeItem.h  GitTreeStyledDelegate.cpp  GitTreeStyledDelegate.h  Logger.h  QMenuView.cpp  QMenuView.h  QMenuView_p.h  RecentFiles.cpp  RecentFiles.h  SpatialHash.h  Utility.cpp  Utility.h
Dialogs/: AddImageDialog.ui  EventArgumentsDialog.cpp  EventArgumentsDialog.h  EventDialog.cpp  EventDialog.h  EventDialog.ui  KeyBindingPreferences.cpp  KeyBindingPreferences.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  PreferencesKeys.cpp  PreferencesKeys.h  TimelineChangeMoment.cpp  TimelineChangeMoment.h  TimelineChangeMoment.ui  keybindingpreferences.cpp
Editors/: BackgroundEditor.cpp  BackgroundEditor.h  BackgroundEditor.ui  BackgroundRenderer.cpp  BackgroundRenderer.h  BaseEditor.cpp  BaseEditor.h  BaseEdtior.h  CodeEditor.cpp  CodeEditor.h  CodeEditor.ui  FontEditor.cpp  FontEditor.h  FontEditor.ui  IncludeEditor.cpp  IncludeEditor.h  IncludeEditor.ui  InformationEditor.cpp  InformationEditor.h  InformationEditor.ui  ObjectEditor.cpp  ObjectEditor.h  ObjectEditor.ui  PathEditor.cpp  PathEditor.h  PathEditor.ui  ResourceModel.cpp  ResourceModel.h  RoomEditor.cpp  RoomEditor.h  RoomEditor.ui  ScriptEditor.cpp  ScriptEditor.h  SettingsEditor.cpp  SettingsEditor.h  SettingsEditor.ui  ShaderEditor.cpp  ShaderEditor.h  SoundEditor.cpp  SoundEditor.h  (+11 more)
Images/: LICENSE  readme.md
Models/: DiagnosticModel.cpp  DiagnosticModel.h  EditorMapper.cpp  EditorMapper.h  EditorModel.cpp  EditorModel.h  EventTypesListModel.cpp  EventTypesListModel.h  EventTypesListSortFilterProxyModel.cpp  EventTypesListSortFilterProxyModel.h  EventsListModel.cpp  EventsListModel.h  GitHistoryModel.cpp  GitHistoryModel.h  ImediateDataWidgetWrapper.cpp  ImediateDataWidgetWrapper.h  ImmediateDataWidgetMapper.cpp  ImmediateMapper.cpp  ImmediateMapper.h  MessageModel.cpp  MessageModel.h  ModelMapper.cpp  ModelMapper.h  PrimitiveModel.cpp  PrimitiveModel.h  ProtoModel.cpp  ProtoModel.h  ProtoModelTableProxy.h  RepeatedImageModel.cpp  RepeatedImageModel.h  RepeatedMessageModel.cpp  RepeatedMessageModel.h  RepeatedModel.cpp  RepeatedModel.h  RepeatedPrimitiveModel.h  RepeatedProtoModel.cpp  RepeatedProtoModel.h  RepeatedSortFilterProxyModel.cpp  RepeatedSortFilterProxyModel.h  RepeatedStringModel.cpp  (+15 more)
Plugins/: PluginServer.cpp  PluginServer.h  RGMPlugin.cpp  RGMPlugin.h  ServerPlugin.cpp  ServerPlugin.h
Tests/: CMakeLists.txt  MainWindowTests.cpp  MainWindowTests.h  tests_main.cpp
Tests/Editors/: VisualShaderEditorTests.cpp  VisualShaderEditorTests.h
Utils/: FieldPath.cpp  FieldPath.h  ProtoManip.cpp  ProtoManip.h  QBoilerplate.h  SafeCasts.h
Widgets/: AssetScrollArea.cpp  AssetScrollArea.h  AssetScrollAreaBackground.cpp  AssetScrollAreaBackground.h  AssetView.cpp  AssetView.h  BackgroundRenderer.cpp  BackgroundRenderer.h  BackgroundView.cpp  BackgroundView.h  CodeWidget.cpp  CodeWidget.h  CodeWidgetPlain.cpp  CodeWidgetScintilla.cpp  ColorPicker.cpp  ColorPicker.h  DragListView.cpp  DragListView.h  InfiniteGrid.cpp  InfiniteGrid.h  PathView.cpp  PathView.h  ResourceSelector.h  RoomRenderer.cpp  RoomRenderer.h  RoomView.cpp  RoomView.h  SpriteSubimageListView.cpp  SpriteSubimageListView.h  SpriteView.cpp  SpriteView.h  StackedCodeWidget.cpp  StackedCodeWidget.h
cmake-package/: CMakeLists.txt
customwidgets/: qttoolbar.cpp  qttoolbar.h
dialogs/: aboutdialog.cpp  aboutdialog.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui
gmk/: .gitignore  Makefile
gmk/lib/zlib/: zlibstat.lib  zlibstatd.lib
gmk/src/: gmk.cpp  gmkaction.cpp  gmkbackground.cpp  gmkexception.cpp  gmkfont.cpp  gmkgameinfo.cpp  gmkincludefile.cpp  gmkobject.cpp  gmkpath.cpp  gmkresource.cpp  gmkroom.cpp  gmkrypt.cpp  gmkscript.cpp  gmksettings.cpp  gmksound.cpp  gmksprite.cpp  gmktimeline.cpp  gmktree.cpp  gmktrigger.cpp  main.cpp  stream.cpp
gmk/src/include/: gmk.h  gmk.hpp  gmkaction.h  gmkaction.hpp  gmkbackground.h  gmkbackground.hpp  gmkcommon.h  gmkcommon.hpp  gmkexception.h  gmkexception.hpp  gmkfont.h  gmkfont.hpp  gmkgameinfo.h  gmkgameinfo.hpp  gmkincludefile.h  gmkincludefile.hpp  gmkobject.h  gmkobject.hpp  gmkpath.h  gmkpath.hpp  gmkresource.h  gmkresource.hpp  gmkroom.h  gmkroom.hpp  gmkrypt.h  gmkrypt.hpp  gmksound.h  (+15 more)
resource/: background.cpp  background.h  font.cpp  font.h  gmobject.cpp  gmobject.h  path.cpp  path.h  resource.cpp  resource.h  room.cpp  room.h  script.cpp  script.h  shader.cpp  shader.h  sound.cpp  sound.h  sprite.cpp  sprite.h  timeline.cpp  timeline.h
serializer/: iconmanager.cpp  iconmanager.h  projectmanager.cpp  projectmanager.h  resource.cpp  resource.h  resourcemanager.cpp  resourcemanager.h  resourcenode.cpp  resourcenode.h  serializer.h
styles/: dark.css  default.css
temp/test1.egm/: test1.egm  tree.yaml
widgets/: backgroundwidget.cpp  backgroundwidget.h  fontwidget.cpp  fontwidget.h  gameinfoeditor.cpp  gameinfoeditor.h  materialwidget.cpp  materialwidget.h  materialwidget.ui  modelwidget.cpp  modelwidget.h  objectwidget.cpp  objectwidget.h  objectwidget.ui  pathwidget.cpp  pathwidget.h  pathwidget.ui  roomwidget.cpp  roomwidget.h  roomwidget.ui  scriptwidget.cpp  scriptwidget.h  shaderwidget.cpp  shaderwidget.h  soundwidget.cpp  soundwidget.h  spritewidget.cpp  spritewidget.h  spritewidget.ui  timelinewidget.cpp  timelinewidget.h
(+4 files in other folders)
